tests/ui/parser/attribute/attr-incomplete.stderr
error[E0539]: malformed `cfg` attribute input
  --> $DIR/attr-incomplete.rs:1:1
   |
LL | #[cfg(target-os = "windows")]
   | ^^^^^^---------------------^^
   |       |
   |       expected a valid identifier here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg-attribute>
help: must be of the form
   |
LL - #[cfg(target-os = "windows")]
LL + #[cfg(predicate)]
   |

error: expected a literal (`1u8`, `1.0f32`, `"string"`, etc.) here, found `%`
  --> $DIR/attr-incomplete.rs:5:19
   |
LL | #[cfg(target_os = %)]
   |                   ^

error[E0539]: malformed `cfg` attribute input
  --> $DIR/attr-incomplete.rs:9:1
   |
LL | #[cfg(target_os?)]
   | ^^^^^^----------^^
   |       |
   |       expected a valid identifier here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg-attribute>
help: must be of the form
   |
LL - #[cfg(target_os?)]
LL + #[cfg(predicate)]
   |

error: wrong meta list delimiters
  --> $DIR/attr-incomplete.rs:13:6
   |
LL | #[cfg[target_os]]
   |      ^^^^^^^^^^^
   |
help: the delimiters should be `(` and `)`
   |
LL - #[cfg[target_os]]
LL + #[cfg(target_os)]
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0539`.
